# configuration

./: .bashrc  .gitignore  CHANGELOG.adoc  CHANGELOG.md  Cargo.toml  Makefile  README.adoc  README.md  go.mod
.github/: dependabot.yml
android-studio/: installed.txt
doc/: bookmarks.md
docker/: dart-apt.Dockerfile  dart.Dockerfile  dart_apt.Dockerfile  go.Dockerfile  rust.Dockerfile  swift.Dockerfile  zig-dnf.Dockerfile
documentation/: .bashrc.save  bookmarks.adoc  bookmarks.md  clang-gcc-tools.md  clang-gcc.adoc  clang-gcc.md  clang-lldb.md  clang-saftey.md  code-forges.adoc  computer-aided-design.adoc  containerization.md  data-interchange.md  disk-utility.adoc  disk-utility.md  job-search.md  linux-distributions.adoc  marketplaces.adoc  message.data-interchange  operating-systems.adoc  package-management.adoc  package-management.md  pacman-commands.md  programmable-logic-controllers.adoc  programming-languages.adoc  search-engines.adoc  search-engines.md  syntax.data  syntax.data-interchange  syntax.schema  text-editors.adoc  ui-widgets.adoc  update-releaser.md  virtual-machines.adoc  youtube-subscriptions.csv  youtube-subscriptions.md
fleet/: run.json  settings.json
fortran/: product-sum.f90
gh-data/: CMakeLists.txt  Cargo.toml  Makefile  README.adoc  README.md  compile-source.md  following.md  fpm.toml
gh-data/documentation/: build.adoc  gh-data.adoc  gh-data.md
gh-data/src/: github.f90  github.rs  main.c  main.cc  main.f90  main.rs
gh-data/src/arguments/: help_message.c  help_message.cc  help_message.f90  help_message.h  parser.c  parser.cc  parser.h  parser.rs  print_help.f90  print_help.rs  print_version.f90  print_version.rs  version_message.c  version_message.cc  version_message.f90  version_message.h
gh-data/src/github/: following.c  following.cc  following.f90  following.h  repositories.c  repositories.cc  repositories.f90  repositories.h  stars.c  stars.cc  stars.f90  stars.h  write-following.f90  write_folliwng.rs  write_following.f90  write_repositories.f90  write_repositories.rs  write_stars.f90  write_stars.rs
gh-sync/: Cargo.toml  Makefile  README.md  fpm.toml
gh-sync/documentation/: gh-sync.md
gh-sync/src/: arguments.f90  github.f90  github.rs  main.f90  main.rs
gh-sync/src/arguments/: help_message.f90  parser.f90  parser.rs  print_help.rs  print_version.rs  version_message.f90
gh-sync/src/github/: synchronize_repositories.f90  synchronize_repositories.rs
ghostty/: config
github/: dependabot.yml  following.adoc  following.md  (+10 more)
null-log/: Cargo.toml  Makefile  README.md  fpm.toml
null-log/documentation/: null-log.md
null-log/src/: arguments.rs  main.c  main.cc  main.f90  main.rs  null.f90
null-log/src/arguments/: help_message.c  help_message.cc  help_message.f90  help_message.hh  parser.c  parser.cc  parser.f90  parser.hh  parser.rs  print_help.rs  print_version.rs  version_message.c  version_message.cc  version_message.f90  version_message.h  version_message.hh
null-log/src/null/: cleaner.c  cleaner.cc  cleaner.f90  cleaner.h  cleaner.hh  cleaner.rs
(+176 files in other folders)
