[workspace]
resolver = "2"

[package]
description = "GitHub Profile Data"
edition.workspace = true
include = [
  "Cargo.toml",
  "src/**/*"
]
license.workspace = true
license-file.workspace = true
name = "github_data"
publish = false
readme = "README.md"
rust-version.workspace = true
version = "1.0.0"

[[bin]]
name = "gh-data"
path = "src/main.rs"

