[workspace]
resolver = "2"

[package]
description = "Synchronize GitHub Forks"
edition.workspace = true
include = [
  "Cargo.toml",
  "src/**/*"
]
license.workspace = true
license-file.workspace = true
name = "github_synchronize"
publish = false
readme = "README.md"
rust-version.workspace = true
version = "1.0.0"

[[bin]]
name = "gh-sync"
path = "src/main.rs"

