[workspace]
resolver = "2"

[package]
description = "Synchronize GitHub Forks"
edition = "2024"
include = [
  "Cargo.toml",
  "src/**/*"
]
license-file = "LICENSE.md"
name = "github_synchronize"
publish = false
readme = "README.md"
rust-version = "1.91.1"
version = "1.0.0"

[[bin]]
name = "gh-sync"
path = "src/main.rs"

