[workspace]
resolver = "2"

[package]
description = "Clean Logs"
edition.workspace = true
include = [
  "Cargo.toml",
  "src/**/*"
]
license.workspace = true
license-file.workspace = true
name = "null_log"
publish = false
readme = "README.md"
rust-version.workspace = true
version = "1.0.0"

[[bin]]
name = "null-log"
path = "src/main.rs"

